# home-iot-command-center

./: .gitignore  CMakeLists.txt
cmake/modules/: CodeCoverage.cmake  VersionResource.rc
home_iot_ctl/: CMakeLists.txt
home_iot_ctl/include/iot/: device.hpp  home.hpp
home_iot_ctl/src/: CMakeLists.txt  device.cpp  home.cpp  mqtt_home.cpp
home_iot_ctl/test/: CMakeLists.txt  test_device.cpp  test_home.cpp
home_iot_ctl_center/: CMakeLists.txt  Readme.txt
home_iot_ctl_center/include/: homeiotctlcenter.hpp
home_iot_ctl_center/resources/: MacOSXBundleInfo.plist.in
home_iot_ctl_center/src/: CMakeLists.txt  homeiotctlcenter.cpp  homeiotctlcenter.ui  main.cpp  mymodel.cpp
include/: mymodel.hpp
src/: CMakeLists.txt
